# solfees

./: .editorconfig  .gitignore  API.md  CHANGELOG.md  CNAME  Cargo.toml  LICENSE.md  README.md  deny.toml  docker-redis.yml  index.html  rust-toolchain.toml
.github/workflows/: be-release.yml  deploy-fe.yml  fe-deploy.yml  release.yml  test.yml
assets/: index-BGf5waBd.css  index-B_6OWp6v.js  index-B_6OWp6v.js.map  index-BliWtvGt.js  index-BliWtvGt.js.map  index-C4lUwXxf.css  index-C5qvdEl8.js  index-C5qvdEl8.js.map  index-C8EM7hBM.css  index-CBgUBKgL.js  index-CBgUBKgL.js.map  index-Cpm4CTjt.js  index-Cpm4CTjt.js.map  index-CyRPzngB.js  index-CyRPzngB.js.map  index-D4TF7ZsW.css  index-DOfe20K4.css  index-DPj5q8Kc.js  index-DPj5q8Kc.js.map  index-Dayrs9qq.css  index-DhD6675s.css  index-Do3aYAee.js  index-Do3aYAee.js.map  index-STtBCm1O.css  index-a14Ql1DC.js  index-a14Ql1DC.js.map
locales/es/: translations.json
solfees-be/: Cargo.toml  build.rs  config-be.yml  config-grpc2redis.yml
solfees-be/src/: cli.rs  config.rs  grpc_geyser.rs  lib.rs  metrics.rs  redis.rs  rpc.rs  rpc_server.rs  rpc_solana.rs  schedule.rs  tracing.rs
solfees-fe/: .gitignore  .prettierignore  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
solfees-fe/.husky/: commit-msg  pre-commit
solfees-fe/.storybook/: main.ts  preview.ts
solfees-fe/src/: App.tsx  i18next.d.ts  main.tsx
solfees-fe/src/assets/: README.md
solfees-fe/src/assets/locales/en/: translations.json
solfees-fe/src/common/: i18n.ts  isReal.ts  nFormatter.ts  prepareValidatorRow.ts  types.ts  utils.ts
solfees-fe/src/components/layout/: Footer.tsx  NextSlotInformer.tsx  PlotLayer.tsx
solfees-fe/src/components/ui/: ComputeUnits.tsx  CustomTable.tsx  EarnedSol.tsx  Epoch.tsx  IconFeed.tsx  ModalFee.tsx  ModalFilter.tsx  SimpleCell.tsx  SlotWithCopy.tsx  Slots.tsx  Transactions.tsx  TransactionsHeaderButton.tsx  Validator.tsx
solfees-fe/src/components/utils/development-tools/: TanStackRouterDevelopmentTools.tsx  TanStackTableDevelopmentTools.tsx
solfees-fe/src/features/: mockedSlots.ts
solfees-fe/src/pages/: HomeNew.tsx  HomeOld.tsx  RootPage.tsx
solfees-fe/src/routes/: homeNew.ts  homeOld.ts  index.ts
solfees-fe/src/store/: scheduleStore.ts  websocketStore.ts
solfees-fe/src/styles/: global-styles.css
