[workspace]
resolver = "2"
members = [
    "solfees-be",
]

[workspace.package]
authors = ["Solana Stream Solutions"]
edition = "2021"
homepage = "https://github.com/solana-stream-solutions"
repository = "https://github.com/solana-stream-solutions/solfees-private"
keywords = ["solana"]
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
borsh = "1.5.1"
clap = "4.5.16"
futures = "0.3.30"
maplit = "1.0.2"
solana-sdk = "=2.0.7"
solana-transaction-status = "=2.0.7"
tokio = "1.40.0"
tonic = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.16.2+solana.2.0.7" } # tag is geyser plugin
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.16.2+solana.2.0.7" } # tag is geyser plugin

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
