[workspace]
resolver = "2"
members = [
    "solfees-be",
]

[workspace.package]
authors = ["Solana Stream Solutions"]
edition = "2021"
homepage = "https://github.com/solana-stream-solutions"
repository = "https://github.com/solana-stream-solutions/solfees-private"
keywords = ["solana"]
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
bincode = "1.3.3"
borsh = "1.5.1"
cargo-lock = "9.0.0"
clap = "4.5.16"
futures = "0.3.30"
git-version = "0.3.9"
http = "1.1.0"
http-body-util = "0.1.2"
human-size = "0.4.3"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-tungstenite = "0.15.0"
hyper-util = "0.1.8"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
prometheus = "0.13.4"
redis = "0.26.1"
serde = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.33"
solana-compute-budget = "=2.0.8"
solana-rpc-client-api = "=2.0.8"
solana-sdk = "=2.0.8"
solana-transaction-status = "=2.0.8"
solana-version = "=2.0.8"
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
tonic = "0.12.2"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vergen = "9.0.0"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.16.3+solana.2.0.8" } # tag is geyser plugin
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.16.3+solana.2.0.8" } # tag is geyser plugin

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
