[package]
name = "solfees-be"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Backend of solfees.io"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "solfees-server"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
