[package]
name = "solfees-be"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Backend of solfees.io"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "solfees-server"

[dependencies]
anyhow = { workspace = true }
atty = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
maplit = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
