[package]
name = "solfees-be"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Backend of solfees.io"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
human-size = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-tungstenite = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "server-graceful"] }
jsonrpc-core = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
prometheus = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-rustls-comp", "ahash"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-client = { workspace = true }
solana-compute-budget = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tonic = { workspace = true, features = ["gzip"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
